--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,13 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
 /tmp
 /config/database.yml
+/config/private_pub.yml
+/public/uploads/*
+.rubocop.yml
+/config/*.sphinx.conf
+/db/sphinx
