add test for group

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /tmp
 /config/database.yml
 /config/private_pub.yml
+/config/initializers/recaptcha.rb
 /public/uploads/*
 .rubocop.yml
 /config/*.sphinx.conf
